modified pixelruler to horizontal and vertical ruler

--- a/WireFrame.csproj
+++ b/WireFrame.csproj
@@ -122,8 +122,8 @@
     <Compile Include="MainPage.xaml.cs">
       <DependentUpon>MainPage.xaml</DependentUpon>
     </Compile>
-    <Compile Include="PixelRuler.xaml.cs">
-      <DependentUpon>PixelRuler.xaml</DependentUpon>
+    <Compile Include="Ruler.xaml.cs">
+      <DependentUpon>Ruler.xaml</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -151,7 +151,7 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
-    <Page Include="PixelRuler.xaml">
+    <Page Include="Ruler.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
