introduced new usercontrol called element that will become base class for all visual element in the scene

--- a/WireFrame.csproj
+++ b/WireFrame.csproj
@@ -120,6 +120,9 @@
       <DependentUpon>App.xaml</DependentUpon>
     </Compile>
     <Compile Include="Common.cs" />
+    <Compile Include="Element.xaml.cs">
+      <DependentUpon>Element.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Grid.xaml.cs">
       <DependentUpon>Grid.xaml</DependentUpon>
     </Compile>
@@ -151,6 +154,10 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Page Include="Element.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="Grid.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
