--- a/WireFrame.csproj
+++ b/WireFrame.csproj
@@ -120,10 +120,14 @@
       <DependentUpon>App.xaml</DependentUpon>
     </Compile>
     <Compile Include="CanvasProfile.cs" />
+    <Compile Include="Commons.cs" />
     <Compile Include="MainPage.xaml.cs">
       <DependentUpon>MainPage.xaml</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SizeBox.xaml.cs">
+      <DependentUpon>SizeBox.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Utility.cs" />
     <Compile Include="WFCanvas.xaml.cs">
       <DependentUpon>WFCanvas.xaml</DependentUpon>
@@ -153,6 +157,10 @@
     <Page Include="MainPage.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
+    </Page>
+    <Page Include="SizeBox.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="WFCanvas.xaml">
       <SubType>Designer</SubType>
