--- a/WireFrame.csproj
+++ b/WireFrame.csproj
@@ -125,8 +125,8 @@
       <DependentUpon>MainPage.xaml</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Source\Controls\WFSizeBox.xaml.cs">
-      <DependentUpon>WFSizeBox.xaml</DependentUpon>
+    <Compile Include="Source\Controls\WFTitleBox.xaml.cs">
+      <DependentUpon>WFTitleBox.xaml</DependentUpon>
     </Compile>
     <Compile Include="Source\Misc\Utility.cs" />
     <Compile Include="Source\Controls\WFCanvas.xaml.cs">
@@ -160,7 +160,7 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
-    <Page Include="Source\Controls\WFSizeBox.xaml">
+    <Page Include="Source\Controls\WFTitleBox.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
