added rectangle primitive drawing state
derived a common primitive state to draw all types of primitive

--- a/WireFrame.csproj
+++ b/WireFrame.csproj
@@ -136,6 +136,8 @@
       <DependentUpon>WFCanvas.xaml</DependentUpon>
     </Compile>
     <Compile Include="Source\States\DrawEllipseState.cs" />
+    <Compile Include="Source\States\DrawPrimitiveState.cs" />
+    <Compile Include="Source\States\DrawRectangleState.cs" />
     <Compile Include="Source\States\FiniteStateMachine.cs" />
     <Compile Include="Source\States\PanState.cs" />
   </ItemGroup>
