--- a/WireFrame.csproj
+++ b/WireFrame.csproj
@@ -139,6 +139,7 @@
     <Compile Include="Source\States\DrawPrimitiveState.cs" />
     <Compile Include="Source\States\DrawRectangleState.cs" />
     <Compile Include="Source\States\FiniteStateMachine.cs" />
+    <Compile Include="Source\States\HighLightElementState.cs" />
     <Compile Include="Source\States\PanState.cs" />
   </ItemGroup>
   <ItemGroup>
