create a StateExecutor class to group PanState and HighlighElementState
StateExecutor will combine more than 1 state and execute HandleInput

--- a/WireFrame.csproj
+++ b/WireFrame.csproj
@@ -141,6 +141,7 @@
     <Compile Include="Source\States\FiniteStateMachine.cs" />
     <Compile Include="Source\States\HighLightElementState.cs" />
     <Compile Include="Source\States\PanState.cs" />
+    <Compile Include="Source\States\StateExecutor.cs" />
   </ItemGroup>
   <ItemGroup>
     <AppxManifest Include="Package.appxmanifest">
