--- a/WireFrame.csproj
+++ b/WireFrame.csproj
@@ -120,6 +120,7 @@
       <DependentUpon>App.xaml</DependentUpon>
     </Compile>
     <Compile Include="Source\CanvasProfile.cs" />
+    <Compile Include="Source\Controls\IElementSelector.cs" />
     <Compile Include="Source\Controls\WFActionTip.xaml.cs">
       <DependentUpon>WFActionTip.xaml</DependentUpon>
     </Compile>
@@ -142,7 +143,7 @@
     <Compile Include="Source\States\DrawEllipseState.cs" />
     <Compile Include="Source\States\DrawPrimitiveState.cs" />
     <Compile Include="Source\States\DrawRectangleState.cs" />
-    <Compile Include="Source\States\FiniteStateMachine.cs" />
+    <Compile Include="Source\States\IFiniteStateMachine.cs" />
     <Compile Include="Source\States\HighLightElementState.cs" />
     <Compile Include="Source\States\PanState.cs" />
     <Compile Include="Source\States\StateExecutor.cs" />
