--- a/WireFrame.csproj
+++ b/WireFrame.csproj
@@ -143,7 +143,7 @@
     <Compile Include="Source\States\DrawEllipseState.cs" />
     <Compile Include="Source\States\DrawRectangleState.cs" />
     <Compile Include="Source\States\IFiniteStateMachine.cs" />
-    <Compile Include="Source\States\HighLightElementState.cs" />
+    <Compile Include="Source\States\SelectionState.cs" />
     <Compile Include="Source\States\PanState.cs" />
     <Compile Include="Source\States\StateExecutor.cs" />
   </ItemGroup>
