--- a/WireFrame.csproj
+++ b/WireFrame.csproj
@@ -147,6 +147,7 @@
     <Compile Include="Source\States\DrawRectangleState.cs" />
     <Compile Include="Source\States\FocusState.cs" />
     <Compile Include="Source\States\IFiniteStateMachine.cs" />
+    <Compile Include="Source\States\RotateElementState.cs" />
     <Compile Include="Source\States\SelectionState.cs" />
     <Compile Include="Source\States\PanState.cs" />
     <Compile Include="Source\States\StateExecutor.cs" />
