--- a/WireFrame.csproj
+++ b/WireFrame.csproj
@@ -123,7 +123,7 @@
       <DependentUpon>WFShapeHighlight.xaml</DependentUpon>
     </Compile>
     <Compile Include="Source\Misc\CanvasProfile.cs" />
-    <Compile Include="Source\Controls\IElementSelector.cs" />
+    <Compile Include="Source\Controls\ISelector.cs" />
     <Compile Include="Source\Controls\WFActionTip.xaml.cs">
       <DependentUpon>WFActionTip.xaml</DependentUpon>
     </Compile>
