added Signal to the project
state change is not given through signal

--- a/WireFrame.csproj
+++ b/WireFrame.csproj
@@ -116,9 +116,13 @@
     <RestoreProjectStyle>PackageReference</RestoreProjectStyle>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="..\signals\Signals.cs">
+      <Link>Vendors\Signals.cs</Link>
+    </Compile>
     <Compile Include="App.xaml.cs">
       <DependentUpon>App.xaml</DependentUpon>
     </Compile>
+    <Compile Include="SignalDeclarations.cs" />
     <Compile Include="Source\Controls\ShapeHighlight.xaml.cs">
       <DependentUpon>ShapeHighlight.xaml</DependentUpon>
     </Compile>
@@ -231,6 +235,7 @@
       <Version>6.2.12</Version>
     </PackageReference>
   </ItemGroup>
+  <ItemGroup />
   <PropertyGroup Condition=" '$(VisualStudioVersion)' == '' or '$(VisualStudioVersion)' &lt; '14.0' ">
     <VisualStudioVersion>14.0</VisualStudioVersion>
   </PropertyGroup>
