--- a/WireFrame.csproj
+++ b/WireFrame.csproj
@@ -164,6 +164,7 @@
     <Compile Include="Source\States\DrawRectangleState.cs" />
     <Compile Include="Source\States\FocusState.cs" />
     <Compile Include="Source\States\IFiniteStateMachine.cs" />
+    <Compile Include="Source\States\ResizeState.cs" />
     <Compile Include="Source\States\RotateElementState.cs" />
     <Compile Include="Source\States\SelectionState.cs" />
     <Compile Include="Source\States\PanState.cs" />
