--- a/WireFrame.csproj
+++ b/WireFrame.csproj
@@ -120,11 +120,15 @@
       <DependentUpon>App.xaml</DependentUpon>
     </Compile>
     <Compile Include="SignalDeclarations.cs" />
+    <Compile Include="Source\Controls\BoxControl.xaml.cs">
+      <DependentUpon>BoxControl.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Source\Controls\Gizmo\CornerResizeGizmo.cs" />
     <Compile Include="Source\Controls\Gizmo\FixedSideResizeGizmo.cs" />
     <Compile Include="Source\Controls\Gizmo\IGizmo.cs" />
     <Compile Include="Source\Controls\Gizmo\FreeSideResizeGizmo.cs" />
     <Compile Include="Source\Controls\Gizmo\MoveGizmo.cs" />
+    <Compile Include="Source\Controls\ViewboxCloner.cs" />
     <Compile Include="Source\Selection\MoveResizeHandler.cs" />
     <Compile Include="Source\Selection\HighlightHandler.cs" />
     <Compile Include="Source\Controls\HighlightControl.xaml.cs">
@@ -197,6 +201,10 @@
       <SubType>Designer</SubType>
     </ApplicationDefinition>
     <Page Include="Source\Controls\ActionTip.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Source\Controls\BoxControl.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
