--- a/WireFrame.csproj
+++ b/WireFrame.csproj
@@ -162,6 +162,7 @@
     <Compile Include="Source\Shapes\EllipseShape.xaml.cs">
       <DependentUpon>EllipseShape.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Source\Shapes\IBox.cs" />
     <Compile Include="Source\Shapes\IShape.cs" />
     <Compile Include="Source\Shapes\RectangleShape.xaml.cs">
       <DependentUpon>RectangleShape.xaml</DependentUpon>
