--- a/WireFrame.csproj
+++ b/WireFrame.csproj
@@ -125,7 +125,7 @@
     <Compile Include="Source\Controls\Gizmo\IGizmo.cs" />
     <Compile Include="Source\Controls\Gizmo\FreeSideResizeGizmo.cs" />
     <Compile Include="Source\Controls\Gizmo\MoveGizmo.cs" />
-    <Compile Include="Source\Controls\ViewboxCloner.cs" />
+    <Compile Include="Source\Shapes\ShapeCloner.cs" />
     <Compile Include="Source\Selection\MoveResizeHandler.cs" />
     <Compile Include="Source\Selection\HighlightHandler.cs" />
     <Compile Include="Source\Controls\HighlightControl.xaml.cs">
