--- a/WireFrame.csproj
+++ b/WireFrame.csproj
@@ -120,8 +120,7 @@
       <DependentUpon>App.xaml</DependentUpon>
     </Compile>
     <Compile Include="SignalDeclarations.cs" />
-    <Compile Include="Source\Controls\Gizmo\CornerResizeGizmo.cs" />
-    <Compile Include="Source\Controls\Gizmo\FixedSideResizeGizmo.cs" />
+    <Compile Include="Source\Controls\Gizmo\ResizeGizmo.cs" />
     <Compile Include="Source\Controls\Gizmo\IContainer.cs" />
     <Compile Include="Source\Controls\Gizmo\IGizmo.cs" />
     <Compile Include="Source\Controls\Gizmo\FreeSideResizeGizmo.cs" />
