--- a/WireFrame.csproj
+++ b/WireFrame.csproj
@@ -170,6 +170,7 @@
     <Compile Include="Source\States\DrawRectangleState.cs" />
     <Compile Include="Source\States\FocusState.cs" />
     <Compile Include="Source\States\IFiniteStateMachine.cs" />
+    <Compile Include="Source\States\MoveState.cs" />
     <Compile Include="Source\States\ResizeState.cs" />
     <Compile Include="Source\States\RotateElementState.cs" />
     <Compile Include="Source\States\SelectionState.cs" />
