--- a/WireFrame.csproj
+++ b/WireFrame.csproj
@@ -120,62 +120,62 @@
       <DependentUpon>App.xaml</DependentUpon>
     </Compile>
     <Compile Include="SignalDeclarations.cs" />
-    <Compile Include="Source\Controls\Gizmo\ResizeGizmo.cs" />
-    <Compile Include="Source\Controls\Gizmo\IContainer.cs" />
-    <Compile Include="Source\Controls\Gizmo\IGizmo.cs" />
-    <Compile Include="Source\Controls\Gizmo\MoveGizmo.cs" />
-    <Compile Include="Source\Shapes\ShapeCloner.cs" />
-    <Compile Include="Source\Selection\MoveResizeHandler.cs" />
-    <Compile Include="Source\Selection\HighlightHandler.cs" />
-    <Compile Include="Source\Controls\HighlightControl.xaml.cs">
+    <Compile Include="Source\Canvas\Controls\Gizmo\ResizeGizmo.cs" />
+    <Compile Include="Source\Canvas\Controls\IContainer.cs" />
+    <Compile Include="Source\Canvas\Controls\Gizmo\IGizmo.cs" />
+    <Compile Include="Source\Canvas\Controls\Gizmo\MoveGizmo.cs" />
+    <Compile Include="Source\Canvas\Shapes\ShapeCloner.cs" />
+    <Compile Include="Source\Canvas\Selection\MoveResizeHandler.cs" />
+    <Compile Include="Source\Canvas\Selection\HighlightHandler.cs" />
+    <Compile Include="Source\Canvas\Controls\HighlightControl.xaml.cs">
       <DependentUpon>HighlightControl.xaml</DependentUpon>
     </Compile>
-    <Compile Include="Source\Misc\CanvasProfile.cs" />
-    <Compile Include="Source\Selection\ISelectionHandler.cs" />
-    <Compile Include="Source\Controls\ActionTip.xaml.cs">
+    <Compile Include="Source\Canvas\Misc\CanvasProfile.cs" />
+    <Compile Include="Source\Canvas\Selection\ISelectionHandler.cs" />
+    <Compile Include="Source\Canvas\Controls\ActionTip.xaml.cs">
       <DependentUpon>ActionTip.xaml</DependentUpon>
     </Compile>
-    <Compile Include="Source\Controls\RotationControl.xaml.cs">
+    <Compile Include="Source\Canvas\Controls\RotationControl.xaml.cs">
       <DependentUpon>RotationControl.xaml</DependentUpon>
     </Compile>
-    <Compile Include="Source\Controls\MoveResizeControl.xaml.cs">
+    <Compile Include="Source\Canvas\Controls\MoveResizeControl.xaml.cs">
       <DependentUpon>MoveResizeControl.xaml</DependentUpon>
     </Compile>
-    <Compile Include="Source\Misc\Commons.cs" />
-    <Compile Include="Source\Misc\PropertyStore.cs" />
+    <Compile Include="Source\Canvas\Misc\Commons.cs" />
+    <Compile Include="Source\Canvas\Misc\PropertyStore.cs" />
     <Compile Include="Source\Pages\MainPage.xaml.cs">
       <DependentUpon>MainPage.xaml</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Source\Controls\TitleBox.xaml.cs">
+    <Compile Include="Source\Canvas\Controls\TitleBox.xaml.cs">
       <DependentUpon>TitleBox.xaml</DependentUpon>
     </Compile>
-    <Compile Include="Source\Misc\Utility.cs" />
-    <Compile Include="Source\Controls\CanvasControl.xaml.cs">
+    <Compile Include="Source\Canvas\Misc\Utility.cs" />
+    <Compile Include="Source\Canvas\Controls\CanvasControl.xaml.cs">
       <DependentUpon>CanvasControl.xaml</DependentUpon>
     </Compile>
-    <Compile Include="Source\Shapes\BoundingBox.cs" />
-    <Compile Include="Source\Shapes\CompoundShape.xaml.cs">
+    <Compile Include="Source\Canvas\Shapes\BoundingBox.cs" />
+    <Compile Include="Source\Canvas\Shapes\CompoundShape.xaml.cs">
       <DependentUpon>CompoundShape.xaml</DependentUpon>
     </Compile>
-    <Compile Include="Source\Shapes\EllipseShape.xaml.cs">
+    <Compile Include="Source\Canvas\Shapes\EllipseShape.xaml.cs">
       <DependentUpon>EllipseShape.xaml</DependentUpon>
     </Compile>
-    <Compile Include="Source\Shapes\IBox.cs" />
-    <Compile Include="Source\Shapes\IShape.cs" />
-    <Compile Include="Source\Shapes\RectangleShape.xaml.cs">
+    <Compile Include="Source\Canvas\IBox.cs" />
+    <Compile Include="Source\Canvas\Shapes\IShape.cs" />
+    <Compile Include="Source\Canvas\Shapes\RectangleShape.xaml.cs">
       <DependentUpon>RectangleShape.xaml</DependentUpon>
     </Compile>
-    <Compile Include="Source\States\DrawEllipseState.cs" />
-    <Compile Include="Source\States\DrawRectangleState.cs" />
-    <Compile Include="Source\States\FocusState.cs" />
-    <Compile Include="Source\States\IFiniteStateMachine.cs" />
-    <Compile Include="Source\States\MoveState.cs" />
-    <Compile Include="Source\States\ResizeState.cs" />
-    <Compile Include="Source\States\RotateElementState.cs" />
-    <Compile Include="Source\States\SelectionState.cs" />
-    <Compile Include="Source\States\PanState.cs" />
-    <Compile Include="Source\States\StateExecutor.cs" />
+    <Compile Include="Source\Canvas\States\DrawEllipseState.cs" />
+    <Compile Include="Source\Canvas\States\DrawRectangleState.cs" />
+    <Compile Include="Source\Canvas\States\FocusState.cs" />
+    <Compile Include="Source\Canvas\States\IFiniteStateMachine.cs" />
+    <Compile Include="Source\Canvas\States\MoveState.cs" />
+    <Compile Include="Source\Canvas\States\ResizeState.cs" />
+    <Compile Include="Source\Canvas\States\RotateElementState.cs" />
+    <Compile Include="Source\Canvas\States\SelectionState.cs" />
+    <Compile Include="Source\Canvas\States\PanState.cs" />
+    <Compile Include="Source\Canvas\States\StateExecutor.cs" />
     <Compile Include="Vendors\Signals.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -198,19 +198,19 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
-    <Page Include="Source\Controls\ActionTip.xaml">
+    <Page Include="Source\Canvas\Controls\ActionTip.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="Source\Controls\RotationControl.xaml">
+    <Page Include="Source\Canvas\Controls\RotationControl.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="Source\Controls\MoveResizeControl.xaml">
+    <Page Include="Source\Canvas\Controls\MoveResizeControl.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="Source\Controls\HighlightControl.xaml">
+    <Page Include="Source\Canvas\Controls\HighlightControl.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
@@ -218,23 +218,23 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
-    <Page Include="Source\Controls\TitleBox.xaml">
+    <Page Include="Source\Canvas\Controls\TitleBox.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="Source\Controls\CanvasControl.xaml">
+    <Page Include="Source\Canvas\Controls\CanvasControl.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="Source\Shapes\CompoundShape.xaml">
+    <Page Include="Source\Canvas\Shapes\CompoundShape.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="Source\Shapes\EllipseShape.xaml">
+    <Page Include="Source\Canvas\Shapes\EllipseShape.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="Source\Shapes\RectangleShape.xaml">
+    <Page Include="Source\Canvas\Shapes\RectangleShape.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
