--- a/WireFrame.csproj
+++ b/WireFrame.csproj
@@ -120,13 +120,14 @@
       <DependentUpon>App.xaml</DependentUpon>
     </Compile>
     <Compile Include="SignalDeclarations.cs" />
+    <Compile Include="Source\DrawArea\Controls\Gizmo\IGizmoHandler.cs" />
     <Compile Include="Source\DrawArea\Controls\Gizmo\ResizeGizmo.cs" />
     <Compile Include="Source\DrawArea\Controls\Gizmo\RotateGizmo.cs" />
     <Compile Include="Source\DrawArea\Controls\IContainer.cs" />
-    <Compile Include="Source\DrawArea\Controls\Gizmo\IGizmo.cs" />
+    <Compile Include="Source\DrawArea\Controls\IGizmo.cs" />
     <Compile Include="Source\DrawArea\Controls\Gizmo\MoveGizmo.cs" />
     <Compile Include="Source\DrawArea\Shapes\ShapeCloner.cs" />
-    <Compile Include="Source\DrawArea\Selection\MoveResizeHandler.cs" />
+    <Compile Include="Source\DrawArea\Selection\MoveResizeRotateHandler.cs" />
     <Compile Include="Source\DrawArea\Selection\HighlightHandler.cs" />
     <Compile Include="Source\DrawArea\Controls\HighlightControl.xaml.cs">
       <DependentUpon>HighlightControl.xaml</DependentUpon>
